--- a/.gitignore
+++ b/.gitignore
@@ -15,26 +15,17 @@ test/tmp
 test/version_tmp
 tmp
 
-# The DeviceAgent binaries
-lib/run_loop/device_agent/app/DeviceAgent-Runner.app
-lib/run_loop/device_agent/ipa/DeviceAgent-Runner.app
-lib/run_loop/device_agent/Frameworks
-
-# RubyMine
-.idea
-
-# Documentation cache and generated files:
-.yardoc
-_yardoc
-doc/
-rdoc
-
 # For a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
 # Gemfile.lock
 .ruby-version
 .ruby-gemset
 .bundle
+
+# JetBrains
+.idea/workspace.xml
+.idea/misc.xml
+.idea/.rakeTasks
 
 # MacOS
 .DS_Store
