ci: fix the 'run unit test' cmd

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Install dependencies
       run: bundle install
     - name: rspec unit
-      run: bundle rspec spec/lib
+      run: bundle exec rake unit
     - name: audit
       run: bundle audit check --update
