--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ test/tmp
 test/version_tmp
 tmp
 
-# For a library or gem, you might want to ignore these files since the code is
-# intended to run in multiple environments; otherwise, check them in:
 Gemfile.lock
 .ruby-version
 .ruby-gemset
@@ -37,3 +35,6 @@ __MACOSX
 (.*/)?\#[^/]*\#$
 *.swp
 *.swo
+
+# A symlink to ../textflight server sources
+textflight
