client: can create a navigation plan

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,3 +30,5 @@ jobs:
       run: bundle exec rake unit
     - name: start server in container
       run: bundle exec rake server
+    - name: run integration tests
+      run: bundle exec rake integration
